Time: 79 ms (70.37%), Space: 65.6 MB (5.72%) - LeetHub